[package]
name = "imgui-sdl3-support"
version = "0.13.0"
edition = "2021"
authors = ["The imgui-rs Developers"]
description = "sdl3 support code for the imgui crate"
homepage = "https://github.com/imgui-rs/imgui-sdl2-support"
repository = "https://github.com/imgui-rs/imgui-sdl2-support"
documentation = "https://docs.rs/imgui-sdl2-support"
license = "MIT OR Apache-2.0"
categories = ["gui"]

[dependencies]
imgui = { version = "0.12.0", git = "https://github.com/imgui-rs/imgui-rs" }
sdl3 = "0.14.5"

[dev-dependencies]
imgui-glow-renderer = { version = "0.13.0", git = "https://github.com/imgui-rs/imgui-glow-renderer" }
sdl3 = { version = "0.14.5", features = [] }

